--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "ignore": "^6.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
