--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "ignore": "^6.0.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "ollama-ai-provider": "^0.15.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
