--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docuforge",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "license": "MIT",
   "type": "module",
   "repository": "https://github.com/douglasrubims/docuforge.git",
@@ -23,11 +23,11 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "ignore": "^6.0.2",
-    "zod": "^3.23.8",
-    "ollama-ai-provider": "^0.15.2"
+    "ollama-ai-provider": "^0.15.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
+    "@biomejs/biome": "^1.9.4",
     "@types/node": "^20.14.9",
     "ts-node": "^10.9.2",
     "tsup": "^8.1.0",
